# anvil

./: .gitignore  CONTRIBUTING.md  README.md  TRAINING.md  pyproject.toml
.github/workflows/: ci.yml
configs/base_models/: llama3.1_8b.yaml  mistral_7b.yaml  qwen2.5_7b.yaml  qwen2.5_coder_14b.yaml  qwen2.5_coder_7b.yaml
configs/guilds/: go_reviewer.yaml
configs/lora/: default.yaml  high_rank.yaml  qlora_consumer.yaml
notebooks/: kaggle_go_dapt.ipynb  kaggle_go_reviewer.ipynb
scripts/: kaggle_eval.py  kaggle_export.py  kaggle_export_lora.py  kaggle_push.py  kaggle_train.py
src/: config.py  data.py  dpo_train.py  hub.py  merge.py  quantize.py  train.py
tests/: test_config.py  test_data.py  test_hub.py  test_merge.py  test_quantize.py  test_train.py
